# raytracer

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: main.cpp  vector.h  window.h
src/geometry/: ray.h  sphere.h  vector.h
src/image/: CMakeLists.txt  app.cpp  app.h  utils.h
src/linalg/: functions.h  vec.h  vec.hxx  vec_fwd.h
src/object/: ray.h  shape.h  sphere.h
src/objects/: CMakeLists.txt  object.h  sphere.cpp  sphere.h
src/scene/: CMakeLists.txt  camera.cpp  camera.h  light.h  scene.h
src/vector/: vector.h
tests/: CMakeLists.txt  test.cpp
